# a-piece-of-shit

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
src/a_piece_of_shit/: __init__.py  _core.py
tests/: test_core.py
