[build-system]
requires = ['setuptools>=68.0', 'wheel']
build-backend = 'setuptools.backends._legacy:_Backend'

[project]
name = 'a-piece-of-shit'
version = '0.1.0'
description = 'A utterly useless package that imports everything for you.'
readme = 'README.md'
license = {text = 'WTFPL'}
requires-python = '>=3.9'
authors = [
    {name = 'Some Idiot'},
]
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Nobody',
    'License :: Other/Proprietary License',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]
dependencies = [
    # ===== PyPI Top 100 (by 30-day downloads) =====
    'boto3',
    'packaging',
    'urllib3',
    'setuptools',
    'certifi',
    'requests',
    'typing-extensions',
    'botocore',
    'idna',
    'charset-normalizer',
    'aiobotocore',
    'python-dateutil',
    'six',
    'cryptography',
    'grpcio-status',
    'cffi',
    'numpy',
    'pyyaml',
    's3transfer',
    'pycparser',
    'pluggy',
    'pydantic',
    'pygments',
    's3fs',
    'fsspec',
    'click',
    'protobuf',
    'pandas',
    'attrs',
    'pydantic-core',
    'pytest',
    'anyio',
    'markupsafe',
    'h11',
    'iniconfig',
    'platformdirs',
    'jmespath',
    'annotated-types',
    'filelock',
    'jinja2',
    'importlib-metadata',
    'pathspec',
    'pyjwt',
    'rsa',
    'httpx',
    'zipp',
    'pytz',
    'httpcore',
    'typing-inspection',
    'pyasn1',
    'aiohttp',
    'python-dotenv',
    'rich',
    'multidict',
    'jsonschema',
    'google-auth',
    'tzdata',
    'yarl',
    'colorama',
    'tqdm',
    'google-api-core',
    'grpcio',
    'tomli',
    'awscli',
    'virtualenv',
    'frozenlist',
    'propcache',
    'googleapis-common-protos',
    'requests-oauthlib',
    'rpds-py',
    'markdown-it-py',
    'referencing',
    'aiosignal',
    'wrapt',
    'greenlet',
    'pillow',
    'pyasn1-modules',
    'sqlalchemy',
    'mdurl',
    'scipy',
    'jsonschema-specifications',
    'pyarrow',
    'trove-classifiers',
    'uvicorn',
    'aiohappyeyeballs',
    'starlette',
    'oauthlib',
    'psutil',
    'pyparsing',
    'fastapi',
    'google-genai',
    'cachetools',
    'opentelemetry-proto',
    'tenacity',
    'et-xmlfile',
    'openpyxl',
    'grpcio-tools',
    'opentelemetry-semantic-conventions',
    'tomlkit',
    # ===== 加碼：經典好用的 =====
    'scikit-learn',
    'tensorflow',
    'torch',
    'transformers',
    'matplotlib',
    'seaborn',
    'plotly',
    'flask',
    'django',
    'celery',
    'redis',
    'beautifulsoup4',
    'scrapy',
    'polars',
    'sympy',
    'networkx',
    'spacy',
    'nltk',
    'xgboost',
    'lightgbm',
    'streamlit',
    'gradio',
    'opencv-python',
    'bokeh',
    'dash',
    'loguru',
    'orjson',
    'msgpack',
    'faker',
    'hypothesis',
    'ray',
    'joblib',
    'numba',
    'lxml',
    'pendulum',
    'arrow',
    'humanize',
    'emoji',
    'regex',
    'wandb',
    'mlflow',
    'optuna',
]

[project.urls]
Homepage = 'https://github.com/someone/a-piece-of-shit'
Issues = 'https://github.com/someone/a-piece-of-shit/issues'

[tool.setuptools.packages.find]
where = ['src']

[tool.ruff]
line-length = 88
target-version = 'py39'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F']
fixable = ['ALL']

[tool.pytest.ini_options]
testpaths = ['tests']
