[build-system]
requires = ['setuptools>=68.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'a-piece-of-shit'
version = '0.2.0'
description = 'A utterly useless package that imports everything for you. Now with top 1000 PyPI packages.'
readme = 'README.md'
license = {text = 'WTFPL'}
requires-python = '>=3.9'
authors = [
    {name = 'Some Idiot'},
]
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]
dependencies = [
    'boto3',
    'packaging',
    'urllib3',
    'setuptools',
    'certifi',
    'requests',
    'typing-extensions',
    'botocore',
    'idna',
    'charset-normalizer',
    'aiobotocore',
    'python-dateutil',
    'six',
    'cryptography',
    'grpcio-status',
    'cffi',
    'numpy',
    'pyyaml',
    's3transfer',
    'pip',
    'pycparser',
    'pluggy',
    'pydantic',
    'pygments',
    's3fs',
    'fsspec',
    'click',
    'protobuf',
    'pandas',
    'attrs',
    'pydantic-core',
    'pytest',
    'anyio',
    'markupsafe',
    'h11',
    'iniconfig',
    'platformdirs',
    'jmespath',
    'wheel',
    'annotated-types',
    'filelock',
    'jinja2',
    'importlib-metadata',
    'pathspec',
    'pyjwt',
    'rsa',
    'httpx',
    'zipp',
    'pytz',
    'httpcore',
    'typing-inspection',
    'pyasn1',
    'aiohttp',
    'python-dotenv',
    'rich',
    'multidict',
    'jsonschema',
    'google-auth',
    'tzdata',
    'yarl',
    'colorama',
    'tqdm',
    'google-api-core',
    'grpcio',
    'tomli',
    'awscli',
    'virtualenv',
    'frozenlist',
    'propcache',
    'googleapis-common-protos',
    'requests-oauthlib',
    'rpds-py',
    'markdown-it-py',
    'referencing',
    'aiosignal',
    'wrapt',
    'greenlet',
    'pillow',
    'pyasn1-modules',
    'sqlalchemy',
    'mdurl',
    'scipy',
    'jsonschema-specifications',
    'pyarrow',
    'trove-classifiers',
    'uvicorn',
    'aiohappyeyeballs',
    'starlette',
    'oauthlib',
    'psutil',
    'pyparsing',
    'fastapi',
    'google-genai',
    'cachetools',
    'opentelemetry-proto',
    'tenacity',
    'et-xmlfile',
    'openpyxl',
    'grpcio-tools',
    'opentelemetry-semantic-conventions',
    'tomlkit',
    'regex',
    'opentelemetry-sdk',
    'sniffio',
    'websocket-client',
    'yandexcloud',
    'soupsieve',
    'beautifulsoup4',
    'distlib',
    'lxml',
    'opentelemetry-api',
    'shellingham',
    'more-itertools',
    'langchain',
    'hatchling',
    'requests-toolbelt',
    'exceptiongroup',
    'docutils',
    'opentelemetry-exporter-otlp-proto-grpc',
    'mypy-extensions',
    'annotated-doc',
    'proto-plus',
    'websockets',
    'pyopenssl',
    'google-cloud-storage',
    'werkzeug',
    'coverage',
    'opentelemetry-exporter-otlp-proto-http',
    'flask',
    'pynacl',
    'sortedcontainers',
    'psycopg2-binary',
    'msgpack',
    'typer',
    'isodate',
    'pydantic-settings',
    'decorator',
    'openai',
    'wcwidth',
    'networkx',
    'poetry-core',
    'dnspython',
    'huggingface-hub',
    'python-multipart',
    'opentelemetry-exporter-otlp-proto-common',
    'distro',
    'azure-core',
    'scikit-learn',
    'redis',
    'joblib',
    'msal',
    'ptyprocess',
    'pexpect',
    'azure-identity',
    'bcrypt',
    'snowflake-connector-python',
    'matplotlib',
    'gitpython',
    'ruff',
    'opentelemetry-exporter-otlp',
    'keyring',
    'fonttools',
    'google-cloud-core',
    'jiter',
    'ruamel-yaml',
    'async-timeout',
    'threadpoolctl',
    'itsdangerous',
    'tabulate',
    'types-requests',
    'kiwisolver',
    'textual',
    'jaraco-classes',
    'secretstorage',
    'alembic',
    'asn1crypto',
    'prompt-toolkit',
    'jeepney',
    'deprecated',
    'smmap',
    'kubernetes',
    'google-crc32c',
    'zstandard',
    'chardet',
    'google-resumable-media',
    'gitdb',
    'orjson',
    'pytest-cov',
    'defusedxml',
    'opentelemetry-instrumentation',
    'prometheus-client',
    'blinker',
    'tzlocal',
    'editables',
    'pyproject-hooks',
    'rapidfuzz',
    'jaraco-context',
    'jaraco-functools',
    'contourpy',
    'paramiko',
    'backoff',
    'google-api-python-client',
    'build',
    'jsonpointer',
    'pytest-asyncio',
    'dill',
    'google-cloud-bigquery',
    'docker',
    'cycler',
    'setuptools-scm',
    'google-cloud-aiplatform',
    'watchfiles',
    'fastjsonschema',
    'email-validator',
    'cloudpickle',
    'mako',
    'msal-extensions',
    'uritemplate',
    'google-auth-oauthlib',
    'azure-storage-blob',
    'httplib2',
    'google-auth-httplib2',
    'marshmallow',
    'transformers',
    'nodeenv',
    'tokenizers',
    'babel',
    'sqlparse',
    'hf-xet',
    'sympy',
    'mypy',
    'ipython',
    'docstring-parser',
    'gcsfs',
    'uv',
    'aiofiles',
    'xmltodict',
    'pre-commit',
    'uvloop',
    'jsonpatch',
    'black',
    'toml',
    'durationpy',
    'identify',
    'mpmath',
    'traitlets',
    'tornado',
    'parso',
    'cfgv',
    'cython',
    'jedi',
    'gunicorn',
    'py4j',
    'google-cloud-secret-manager',
    'opentelemetry-util-http',
    'importlib-resources',
    'python-json-logger',
    'opensearch-py',
    'executing',
    'opentelemetry-instrumentation-requests',
    'tiktoken',
    'matplotlib-inline',
    'httptools',
    'asttokens',
    'asgiref',
    'mcp',
    'nest-asyncio',
    'langchain-core',
    'sentry-sdk',
    'grpc-google-iam-v1',
    'isort',
    'requests-aws4auth',
    'markdown',
    'webencodings',
    'httpx-sse',
    'dbt-core',
    'stack-data',
    'sse-starlette',
    'pure-eval',
    'cachecontrol',
    'grpcio-health-checking',
    'opentelemetry-exporter-prometheus',
    'google-cloud-batch',
    'pytest-xdist',
    'aliyun-python-sdk-core',
    'pymongo',
    'execnet',
    'awswrangler',
    'ply',
    'typing-inspect',
    'databricks-sdk',
    'authlib',
    'debugpy',
    'litellm',
    'google-analytics-admin',
    'watchdog',
    'termcolor',
    'pymysql',
    'aioitertools',
    'typedload',
    'pkginfo',
    'xxhash',
    'dulwich',
    'pyzmq',
    'mccabe',
    'installer',
    'dbt-adapters',
    'ruamel-yaml-clib',
    'typer-slim',
    'h2',
    'hyperframe',
    'pytest-mock',
    'hpack',
    'events',
    'torch',
    'msrest',
    'pycryptodome',
    'pandas-stubs',
    'jsonpath-ng',
    'poetry',
    'dbt-common',
    'lz4',
    'dataclasses-json',
    'pycodestyle',
    'slack-sdk',
    'requests-file',
    'langsmith',
    'cattrs',
    'crashtest',
    'pendulum',
    'croniter',
    'notebook',
    'jupyter-core',
    'arrow',
    'rfc3339-validator',
    'argcomplete',
    'snowflake-sqlalchemy',
    'deepdiff',
    'datadog',
    'multiprocess',
    'pygithub',
    'cleo',
    'invoke',
    'ipykernel',
    'future',
    'semver',
    'shapely',
    'wsproto',
    'azure-common',
    'tree-sitter',
    'smart-open',
    'tinycss2',
    'poetry-plugin-export',
    'jupyter-client',
    'safetensors',
    'databricks-sql-connector',
    'portalocker',
    'comm',
    'loguru',
    'mistune',
    'xlsxwriter',
    'sphinx',
    'types-awscrt',
    'text-unidecode',
    'py',
    'botocore-stubs',
    'narwhals',
    'pysocks',
    'simplejson',
    'bleach',
    'structlog',
    'backports-tarfile',
    'scramp',
    'lark',
    'nvidia-nccl-cu12',
    'jsonschema-path',
    'types-s3transfer',
    'python-slugify',
    'datasets',
    'google-cloud-monitoring',
    'numba',
    'boto3-stubs',
    'graphql-core',
    'anthropic',
    'librt',
    'rich-toolkit',
    'google-cloud-vision',
    'typeguard',
    'opensearch-protobufs',
    'google-cloud-speech',
    'google-cloud-kms',
    'faker',
    'google-cloud-resource-manager',
    'nbformat',
    'toolz',
    'google-cloud-compute',
    'ray',
    'google-cloud-tasks',
    'pytokens',
    'google-cloud-dlp',
    'google-cloud-bigtable',
    'pbs-installer',
    'pyflakes',
    'google-cloud-logging',
    'brotli',
    'nbconvert',
    'zope-interface',
    'google-cloud-videointelligence',
    'google-cloud-language',
    'argon2-cffi',
    'argon2-cffi-bindings',
    'xlrd',
    'redshift-connector',
    'google-cloud-workflows',
    'nltk',
    'pylint',
    'types-pyyaml',
    'deprecation',
    'google-cloud-os-login',
    'elasticsearch',
    'google-cloud-dataform',
    'types-protobuf',
    'sqlalchemy-bigquery',
    'pyspark',
    'selenium',
    'colorlog',
    'inflection',
    'responses',
    'pathable',
    'google-cloud-redis',
    'llvmlite',
    'ipython-pygments-lexers',
    'langchain-openai',
    'nbclient',
    'tree-sitter-languages',
    'pycryptodomex',
    'confluent-kafka',
    'asyncpg',
    'pyperclip',
    'plotly',
    'json5',
    'flake8',
    'pywin32',
    'google-cloud-memcache',
    'flatbuffers',
    'findpython',
    'astroid',
    'humanfriendly',
    'nvidia-cublas-cu12',
    'async-lru',
    'jupyterlab',
    'google-ads',
    'trio',
    'triton',
    'jupyter-server',
    'types-python-dateutil',
    'humanize',
    'beartype',
    'mypy-boto3-s3',
    'mysql-connector-python',
    'nvidia-cusparse-cu12',
    'pandocfilters',
    'jupyterlab-pygments',
    'altair',
    'nvidia-nvjitlink-cu12',
    'google-cloud-pubsub',
    'overrides',
    'aenum',
    'opentelemetry-instrumentation-fastapi',
    'google-cloud-appengine-logging',
    'nvidia-cudnn-cu12',
    'nvidia-cuda-nvrtc-cu12',
    'kombu',
    'outcome',
    'nvidia-cufft-cu12',
    'nvidia-cusolver-cu12',
    'psycopg2',
    'nvidia-curand-cu12',
    'azure-keyvault-secrets',
    'pg8000',
    'jsonref',
    'nvidia-cuda-cupti-cu12',
    'opencv-python',
    'nvidia-cuda-runtime-cu12',
    'pyee',
    'webcolors',
    'click-plugins',
    'psycopg',
    'ecdsa',
    'orderly-set',
    'flask-cors',
    'polars',
    'celery',
    'absl-py',
    'jupyterlab-server',
    'send2trash',
    'cyclopts',
    'opentelemetry-instrumentation-asgi',
    'semgrep',
    'uuid-utils',
    'fqdn',
    'aws-sam-translator',
    'nvidia-nvtx-cu12',
    'isoduration',
    'uri-template',
    'pymssql',
    'pyrsistent',
    'apache-beam',
    'pytest-timeout',
    'mmh3',
    'sqlglot',
    'seaborn',
    'prettytable',
    'fastmcp',
    'diskcache',
    'db-dtypes',
    'rfc3986-validator',
    'antlr4-python3-runtime',
    'widgetsnbextension',
    'langchain-community',
    'pymupdf',
    'jupyterlab-widgets',
    'freezegun',
    'ipywidgets',
    'xgboost',
    'langgraph',
    'langchain-text-splitters',
    'cfn-lint',
    'click-didyoumean',
    'billiard',
    'gevent',
    'appdirs',
    'ijson',
    'terminado',
    'django',
    'azure-storage-file-datalake',
    'playwright',
    'adal',
    'jupyter-server-terminals',
    'amqp',
    'vine',
    'thrift',
    'lazy-object-proxy',
    'oauth2client',
    'nvidia-cusparselt-cu12',
    'mdit-py-plugins',
    'azure-mgmt-core',
    'jupyter-events',
    'trio-websocket',
    'google-cloud-audit-log',
    'psycopg-binary',
    'zeep',
    'click-repl',
    'aiosqlite',
    'fastavro',
    'notebook-shim',
    'onnxruntime',
    'pypdf',
    'setproctitle',
    'retry',
    'pyodbc',
    'rich-rst',
    'coloredlogs',
    'ordered-set',
    'fakeredis',
    'delta-spark',
    'mlflow',
    'gspread',
    'apache-airflow-providers-common-sql',
    'google-cloud-run',
    'mashumaro',
    'google-cloud-texttospeech',
    'google-cloud-bigquery-datatransfer',
    'semantic-version',
    'jupyter-lsp',
    'google-cloud-orchestration-airflow',
    'python-jose',
    'google-cloud-dataproc-metastore',
    'imageio',
    'dateparser',
    'tldextract',
    'purecloudplatformclientv2',
    'azure-storage-queue',
    'langgraph-prebuilt',
    'ddtrace',
    'rich-click',
    'types-urllib3',
    'h5py',
    'inspect-ai',
    'snowflake-snowpark-python',
    'python-docx',
    'nvidia-cufile-cu12',
    'google-cloud-bigquery-storage',
    'google-cloud-automl',
    'mlflow-skinny',
    'rfc3986',
    'py-key-value-aio',
    'universal-pathlib',
    'llama-parse',
    'ormsgpack',
    'omegaconf',
    'sshtunnel',
    'dbt-protos',
    'moto',
    'google-cloud-dataflow-client',
    'oss2',
    'pandas-gbq',
    'nh3',
    'junitparser',
    'streamlit',
    'aioboto3',
    'types-pytz',
    'opencv-python-headless',
    'gcloud-aio-storage',
    'tf-keras-nightly',
    'dask',
    'rfc3987-syntax',
    'sendgrid',
    'langgraph-sdk',
    'retrying',
    'sentencepiece',
    'checkov',
    'graphql-relay',
    'mergedeep',
    'langgraph-checkpoint',
    'graphviz',
    'pycountry',
    'llama-cloud-services',
    'google-pasta',
    'linkify-it-py',
    'libcst',
    'ujson',
    'fastapi-cli',
    'graphene',
    'snowballstemmer',
    'statsmodels',
    'tomli-w',
    'uc-micro-py',
    'bytecode',
    'html5lib',
    'msgspec',
    'pdfminer-six',
    'torchvision',
    'polars-runtime-32',
    'tensorboard',
    'mock',
    'duckdb',
    'entrypoints',
    'envier',
    'tox',
    'opentelemetry-instrumentation-threading',
    'elastic-transport',
    'zope-event',
    'pytest-runner',
    'tableauserverclient',
    'agate',
    'nvidia-nvshmem-cu12',
    'pytest-rerunfailures',
    'unidecode',
    'patsy',
    'ml-dtypes',
    'pbr',
    'simple-salesforce',
    'pytimeparse',
    'openapi-spec-validator',
    'google-cloud-dataproc',
    'great-expectations',
    'pydantic-extra-types',
    'tooth-python',
    'opentelemetry-instrumentation-urllib3',
    'pytest-metadata',
    'openapi-pydantic',
    'types-certifi',
    'fastuuid',
    'types-setuptools',
    'python-telegram-bot',
    'tblib',
    'pydata-google-auth',
    'readme-renderer',
    'cramjam',
    'griffe',
    'google-cloud-firestore',
    'parsedatetime',
    'passlib',
    'backports-zstd',
    'opentelemetry-instrumentation-wsgi',
    'inflect',
    'cuda-bindings',
    'validators',
    'pydocket',
    'lockfile',
    'pyright',
    'schema',
    'mypy-boto3-sts',
    'ninja',
    'frozendict',
    'google-cloud-spanner',
    'azure-cosmos',
    'apache-airflow-providers-fab',
    'pathvalidate',
    'opentelemetry-instrumentation-dbapi',
    'yamllint',
    'pytest-json-ctrf',
    'hvac',
    'phonenumbers',
    'cuda-pathfinder',
    'imagesize',
    'opentelemetry-instrumentation-urllib',
    'msrestazure',
    'sphinxcontrib-serializinghtml',
    'langchain-google-vertexai',
    'pipenv',
    'peewee',
    'opentelemetry-instrumentation-django',
    'alabaster',
    'apscheduler',
    'holidays',
    'lupa',
    'weaviate-client',
    'twine',
    'pypdf2',
    'pytzdata',
    'reportlab',
    'azure-datalake-store',
    'progressbar2',
    'opentelemetry-instrumentation-flask',
    'databricks-sqlalchemy',
    'mysqlclient',
    'pyiceberg',
    'dbt-semantic-interfaces',
    'bracex',
    'sqlalchemy-utils',
    'bs4',
    'asyncio',
    'python-http-client',
    'pybind11',
    'opentelemetry-instrumentation-psycopg2',
    'scikit-image',
    'posthog',
    'azure-monitor-opentelemetry-exporter',
    'python-magic',
    'leather',
    'dacite',
    'opentelemetry-instrumentation-httpx',
    'openapi-schema-validator',
    'uv-build',
    'flask-sqlalchemy',
    'limits',
    'aws-requests-auth',
    'cssselect',
    'hypothesis',
    'filetype',
    'mypy-boto3-iam',
    'sphinxcontrib-htmlhelp',
    'sphinxcontrib-qthelp',
    'pip-tools',
    'sphinxcontrib-applehelp',
    'dbt-extractor',
    'sphinxcontrib-devhelp',
    'sagemaker',
    'azure-batch',
    'pyroaring',
    'ua-parser',
    'python-utils',
    'pypdfium2',
    'sphinxcontrib-jsmath',
    'wcmatch',
    'stevedore',
    'gremlinpython',
    'pkgutil-resolve-name',
    'gcloud-aio-auth',
    'id',
    'cbor2',
    'astronomer-cosmos',
    'stripe',
    'cssselect2',
    'jira',
    'oscrypto',
    'texttable',
    'tensorflow',
    'bitarray',
    'lazy-loader',
    'requests-mock',
    'azure-mgmt-resource',
    'grpc-interceptor',
    'gcloud-aio-bigquery',
    'apache-airflow-providers-cncf-kubernetes',
    'wandb',
    'sagemaker-studio',
    'mypy-boto3-batch',
    'flit-core',
    'aiohttp-retry',
    'pymdown-extensions',
    'types-cachetools',
    'kafka-python',
    'hyperlink',
    'flask-limiter',
    'pymilvus',
    'types-toml',
    'opt-einsum',
    'click-option-group',
    'apache-airflow-providers-databricks',
    'flask-login',
    'pyproj',
    'opencensus',
    'accelerate',
    'kubernetes-asyncio',
    'tensorboard-data-server',
    'py-cpuinfo',
    'datadog-api-client',
    'jsonpickle',
    'djangorestframework',
    'cached-property',
    'markdownify',
    'pathlib-abc',
    'youtube-transcript-api',
    'argparse',
    'opencensus-context',
    'oracledb',
    'userpath',
    'sentence-transformers',
    'apache-airflow-providers-snowflake',
    'pydeck',
    'google-cloud-translate',
    'levenshtein',
    'snowplow-tracker',
    'gast',
    'pathos',
    'daff',
    'temporalio',
    'aws-lambda-powertools',
    'pytest-html',
    'azure-servicebus',
    'joserfc',
    'aws-xray-sdk',
    'einops',
    'jpype1',
    'looker-sdk',
    'bidict',
    'time-machine',
    'py-key-value-shared',
    'pyexasol',
    'singer-sdk',
    'spacy',
    'pdfplumber',
    'fasteners',
    'deltalake',
    'murmurhash',
    'smdebug-rulesconfig',
    'statsd',
    'partd',
    'databricks-labs-blueprint',
    'strictyaml',
    'locket',
    'google-cloud-container',
    'cron-descriptor',
    'natsort',
    'pox',
    'google-cloud-datacatalog',
    'opentelemetry-instrumentation-logging',
    'ppft',
    'jax',
    'apache-airflow',
    'pinecone',
    'eval-type-backport',
    'python-pptx',
    'grpclib',
    'pyotp',
    'google-cloud-build',
    'python-gitlab',
    'parse',
    'cymbal',
    'ua-parser-builtins',
    'blis',
    'emoji',
    'jwcrypto',
    'tifffile',
    'catalogue',
    'cloudpathlib',
    'google-cloud-dataplex',
    'azure-mgmt-storage',
    'preshed',
    'curl-cffi',
    'sqlalchemy-spanner',
    'keyrings-google-artifactregistry-auth',
    'gql',
    'google-cloud-storage-transfer',
    'pytest-env',
    'ydb',
    'maxminddb',
    'srsly',
    'thinc',
    'sh',
    'pyspnego',
    'simpleeval',
    'opentelemetry-distro',
    'strenum',
    'pydantic-ai-slim',
    'wasabi',
    'watchtower',
    'keras',
    'fastapi-cloud-cli',
    'python-daemon',
    'pybase64',
    'azure-storage-file-share',
    'pyathena',
    'makefun',
    'pickleshare',
    'factory-boy',
    'azure-mgmt-containerservice',
    'pydub',
    'pyproject-api',
    'spacy-legacy',
    'torchaudio',
    'tritonclient',
    'python-socketio',
    'google-generativeai',
    'python-engineio',
    'spacy-loggers',
    'fastparquet',
    'docopt',
    'backcall',
    'parameterized',
    'ty',
    'amazon-ion',
    'clickhouse-connect',
    'rich-argparse',
    'pydot',
    'fuzzywuzzy',
    'python-gnupg',
    'fire',
    'immutabledict',
    'apache-airflow-providers-common-compat',
    'hiredis',
    'grpcio-gcp',
    'simple-websocket',
    'geopandas',
    'xarray',
    'azure-keyvault-keys',
    'bandit',
    'python-discovery',
    'unidiff',
    'cmake',
    'apache-airflow-providers-mysql',
    'rignore',
    'jupyter-console',
    'jupyter',
    'apache-airflow-providers-ssh',
    'soundfile',
    'mkdocs-material',
    'confection',
    'boltons',
    'django-cors-headers',
    'geoip2',
    'resolvelib',
    'wtforms',
    'pinecone-plugin-assistant',
    'pgvector',
    'pydeequ',
    'py-spy',
    'cohere',
    'apache-airflow-providers-http',
    'twilio',
    'mkdocs',
    'segment-analytics-python',
    'databricks-cli',
    'apache-airflow-providers-google',
    'google-ai-generativelanguage',
    'jaydebeapi',
    'av',
    'async-generator',
    'onnx',
    'flask-wtf',
    'nvidia-ml-py',
    'astunparse',
    'types-cffi',
    'ghp-import',
    'pydantic-graph',
    'diff-cover',
    'pyyaml-env-tag',
    'avro',
    'caio',
    'azure-kusto-data',
    'aiofile',
    'configargparse',
    'psycopg-pool',
    'pinotdb',
    'nexus-rpc',
    'pyphen',
    'realtime',
    'apispec',
    'azure-keyvault-certificates',
    'thrift-sasl',
    'geographiclib',
    'trino',
    'questionary',
    'types-redis',
    'azure-mgmt-msi',
    'crc32c',
    'prek',
]

[project.urls]
Homepage = 'https://github.com/gpwork4u/a-piece-of-shit'
Issues = 'https://github.com/gpwork4u/a-piece-of-shit/issues'

[tool.setuptools.packages.find]
where = ['src']

[tool.ruff]
line-length = 88
target-version = 'py39'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F']
fixable = ['ALL']

[tool.pytest.ini_options]
testpaths = ['tests']
